--- a/app/views/home/_timeline.html.erb
+++ b/app/views/home/_timeline.html.erb
@@ -3,8 +3,8 @@
   .hour {
     width:100%;
     height:8vh;
-    background:lightgrey;
-    border:0.1em solid darkgrey;
+    /*background:#F0FFFF;*/
+    border:0.1em solid #C2DFFF;
     text-align:center;
   }
   .half-hour {
